# Algorithms

./: read.txt
Some/: Readme.md  list.txt
Some/factorial/: f_arr_calloc.c  f_array.c  stirling.cpp
Some/fibonacci/: bad_fib.c
Some/linked_list/: l_list_1.c
Some/monte_carlo/: go  mv_1.c
Some/stringReverse/: rev.cpp
Some/string_reverse/: main.c
Windows/file_manager/: Java_FM.java  descrition.txt
Windows/file_manager/code/: build.bat  manager.c
Windows/file_manager/misc/: manager.lnk  shell.bat
Windows/find_day/: CMakeLists.txt  main.c
Windows/first_vs/Debug/: first.ilk
Windows/first_vs/first/: first.cpp
Windows/first_vs/first/Debug/: first.pch  vc141.idb
Windows/first_vs/first/Debug/first.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
Windows/stringReverse/: CMakeLists.txt
greedy/change_making/: CMakeLists.txt  Makefile  main.c
huffman_coding/: frequency.c  huffcod.c  text.txt
sort/: README.md
sort/bubble_sort/: bs_1.c  bs_2.c
sort/comparing/: Makefile  compare.c  sort_alg.c
sort/heapsort/: Makefile  heapsort.c
sort/insertion_sort/: is_1.c
sort/merge_sort/: Makefile  merge.c
sort/q_i_sort/: Makefile  sort.c
sort/quicksort/: Makefile  quicksort.c
sort/selection_sort/: ss_1.c
sort/sort_strings/: CMakeLists.txt  sorting.c
sort/timsort/: Makefile  timsort.c  timsort.py
taocp/: euclid_al.c  euclid_al.cpp  read.txt
taocp/chapter_1/1_1_a/: euclid_al.c  euclid_al.cpp
taocp/chapter_1/1_2_mp/: extended_e_al.c
taocp/chapter_1/1_2_mp/121_mi/: alg_i.c
taocp/chapter_1/1_3_2/: easter_data.c  primes_table.c
